[package]
name = "partpaybuild"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "partpaybuild"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
chrono = "0.4.39"
mpl-core = "0.8.0"
anchor-spl = { version = "0.30.1", features = ["token"] }

